--- a/Baoli/Business/Home/View/BLReviewCell.xib
+++ b/Baoli/Business/Home/View/BLReviewCell.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="378" height="111"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="378" height="110.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="378" height="111"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="业主A先生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X19-zp-abR">
@@ -126,6 +126,9 @@
                     <constraint firstItem="jgY-pJ-GcU" firstAttribute="centerY" secondItem="bGh-EW-ldX" secondAttribute="centerY" id="r3T-Qv-qgp"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="detailLabel" destination="TUZ-5v-Eos" id="6dH-z6-UdK"/>
+            </connections>
             <point key="canvasLocation" x="63" y="-26.5"/>
         </tableViewCell>
     </objects>
